Image file path change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Hero start -->
     <div id="hero">
         <div class="avatar_container">
-            <img class="pp" src="/images/pp1.png">
+            <img class="pp" src="images/pp1.png">
         </div>
         <div class="home_text">
             <h1 class="fullName">I'm Max <br />Web/Game Developer</h1>
@@ -42,14 +42,14 @@
         <div class="skills_box_container">
             <div class="skills_box">
                 <div class="skills_icon">
-                    <img class="svg_icon" alt="html" src="/svg/html-5-svgrepo-com.svg">
-                    <img class="svg_icon" alt="css" src="/svg/css-3-svgrepo-com.svg">
-                    <img class="svg_icon" alt="javascript" src="/svg/js-svgrepo-com.svg">
-                    <img class="svg_icon" alt="react" src="/svg/react-svgrepo-com.svg">
-                    <img class="svg_icon" src="/svg/bootstrap-svgrepo-com.svg" alt="bootstrap">
-                    <img class="svg_icon" alt="TypeScript logo" src="/svg/Typescript_logo_2020.svg.png">
-                    <img class="svg_icon" src="/svg/sass-svgrepo-com.svg" alt="sass">
-                    <img class="svg_icon" alt="phaser logo" src="/svg/phaser_logo.png">
+                    <img class="svg_icon" alt="html" src="svg/html-5-svgrepo-com.svg">
+                    <img class="svg_icon" alt="css" src="svg/css-3-svgrepo-com.svg">
+                    <img class="svg_icon" alt="javascript" src="svg/js-svgrepo-com.svg">
+                    <img class="svg_icon" alt="react" src="svg/react-svgrepo-com.svg">
+                    <img class="svg_icon" src="svg/bootstrap-svgrepo-com.svg" alt="bootstrap">
+                    <img class="svg_icon" alt="TypeScript logo" src="svg/Typescript_logo_2020.svg.png">
+                    <img class="svg_icon" src="svg/sass-svgrepo-com.svg" alt="sass">
+                    <img class="svg_icon" alt="phaser logo" src="svg/phaser_logo.png">
                 </div>
             </div>
             <div class="skills_box">
@@ -79,7 +79,7 @@
             <div class="cert_box left">
                 <p class="long_text">Responsive Web Design (FreeCodeCamp) — April 2023</p>
                 <div class="proj_img_container">
-                    <img class="proj_img" src="/images/freeCodeCamp_cert.png" alt="udemy_certificate">
+                    <img class="proj_img" src="images/freeCodeCamp_cert.png" alt="udemy_certificate">
                 </div>
             </div>
         </div>
@@ -93,8 +93,8 @@
             smooth and engaging gameplay, and fixing bugs.</p>
         <div class="my_proj_box">
             <div class="proj_img_container">
-                <img class="proj_img" src="/images/halloweenGhost.webp">
-                <img class="proj_img" src="/images/halloweenPanel.webp">
+                <img class="proj_img" src="images/halloweenGhost.webp">
+                <img class="proj_img" src="images/halloweenPanel.webp">
             </div>
             <div class="proj_info">
                 <h5>Halloween mini-game<br> Released - October 2024</h5>
@@ -119,8 +119,8 @@
 
         <div class="my_proj_box left">
             <div class="proj_img_container">
-                <img class="proj_img" src="/images/grit.png">
-                <img class="proj_img" src="/images/Krampos.png">
+                <img class="proj_img" src="images/grit.png">
+                <img class="proj_img" src="images/Krampos.png">
             </div>
 
             <div class="proj_info">
@@ -241,8 +241,8 @@
                 recreates the nostalgic gameplay experience in a digital format.
             </p>
             <div class="proj_img_container">
-                <img class="proj_img" src="/images/Teks.png">
-                <img class="proj_img" src="/images/TeksPremium.png">
+                <img class="proj_img" src="images/Teks.png">
+                <img class="proj_img" src="images/TeksPremium.png">
             </div>
             <h4 style="margin-bottom: 1rem;">
                 <li>
