--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <div class="my_proj_box">
             <div class="proj_img_container">
-                <img class="proj_img" src="/images/easter-game.webp">
+                <img class="proj_img" src="images/easter-game.webp">
             </div>
 
             <div class="proj_info">
@@ -272,11 +272,11 @@
     <div id="contact">
         <span>Let's Talk</span>
         <div class="contact_icons">
-            <a href="mailto:maxuberas@gmail.com"><img class="contact_img" src="/svg/gmail-svgrepo-com.svg"></a>
+            <a href="mailto:maxuberas@gmail.com"><img class="contact_img" src="svg/gmail-svgrepo-com.svg"></a>
             <a href="https://discordapp.com/users/958601372230643753"><img class="contact_img"
-                    src="/svg/discord-svgrepo-com.svg"></a>
+                    src="svg/discord-svgrepo-com.svg"></a>
             <a href="https://www.instagram.com/maxuberas?igsh=dnFweG04cGNtNjQ4"><img class="contact_img"
-                    src="/svg/instagram-1-svgrepo-com.svg"></a>
+                    src="svg/instagram-1-svgrepo-com.svg"></a>
         </div>
     </div>
     <!-- Contact end -->
