Adjust name font size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h2>Frez Maxine Uberas</h2>
+        <h2 class="fullName">Frez Maxine Uberas</h2>
     </header>
 
     <!-- Hero start -->
@@ -26,7 +26,7 @@
             <img class="pp" src="images/pp1.png">
         </div>
         <div class="home_text">
-            <h1 class="fullName">I'm Max <br />Web/Game Developer</h1>
+            <h1 class="shortName">I'm Max <br />Web/Game Developer</h1>
             <p class="long_text">I'm a passionate web and game developer with experience in creating 2D games. I also
                 have a strong
                 foundation in web development, specializing in building responsive websiste. I enjoy taking on projects
@@ -103,14 +103,17 @@
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:</h3><br/>
                     <h5>GitHub contribution links:</h5>
                     <li>
+                        <a  class="github_links"
+                            href="https://github.com/Telknub/halloween-portal/pull/6#:~:text=Add%20first-,enemy,-%236">First Enemy</a>
+                    </li>
+                    <li>
                         <a class="github_links"
                             href="https://github.com/Telknub/halloween-portal/pull/7#:~:text=Add-,enemy,-2%20%237">Zombie
                             and Ghost</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/halloween-portal/pull/11/files#:~:text=Portal%20Modal-,Layout,-%2311">Panel/Modal
-                            implementation</a>
+                            href="https://github.com/Telknub/halloween-portal/pull/11/files#:~:text=Portal%20Modal-,Layout,-%2311">Panel and Modal implementation</a>
                     </li>
                     <h3 class="github_des" style="margin-top: 1rem;">This included base movement, interaction logic, <br/> and event-specific behavior across different entities.</h3>
                 </div>
@@ -203,9 +206,7 @@
 
         <div class="my_proj_box left">
             <div class="proj_img_container">
-                <video class="proj_img">
-                    <source src="images/Screen_Recording_2025-06-24_at_11.07.54_AM.mp4" type="video/mp4">
-                </video>
+                <img class="proj_img" src="images/festival_of_colors.png">
             </div>
             <div class="proj_info">
                 <h5>Festival of Colors mini-game <br /> Released - June 2025</h5>
