Fix github contribution links

--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
                     <h5>GitHub contribution links:</h5>
                     <li>
                         <a  class="github_links"
-                            href="https://github.com/Telknub/halloween-portal/pull/6#:~:text=Add%20first-,enemy,-%236">First Enemy</a>
+                            href="https://github.com/Telknub/halloween-portal/pull/6#:~:text=Add%20first-,enemy,-%236" target="_blank">First Enemy</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/halloween-portal/pull/7#:~:text=Add-,enemy,-2%20%237">Zombie
+                            href="https://github.com/Telknub/halloween-portal/pull/7#:~:text=Add-,enemy,-2%20%237" target="_blank">Zombie
                             and Ghost</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/halloween-portal/pull/11/files#:~:text=Portal%20Modal-,Layout,-%2311">Panel and Modal implementation</a>
+                            href="https://github.com/Telknub/halloween-portal/pull/11#:~:text=Insights-,Portal%20Modal%20Layout,-%2311" target="_blank">Panel and Modal implementation</a>
                     </li>
                     <h3 class="github_des" style="margin-top: 1rem;">This included base movement, interaction logic, <br/> and event-specific behavior across different entities.</h3>
                 </div>
@@ -134,22 +134,22 @@
                     <h5>GitHub contribution links:</h5>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Maxam07?tab=overview&from=2024-12-01&to=2024-12-31#:~:text=%5BFEAT%5D%20Krampus%20and%20Coal%20Mechanics">Krampus
+                            href="https://github.com/Telknub/christmas-portal/pull/1#:~:text=%5BFEAT%5D%20Krampus%20and,Code" target="_blank">Krampus
                             and Coal</a><br />
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/christmas-portal/pull/3/files#:~:text=FEAT%5D%20Grit%20event-,mechanics,-%233">Grit
+                            href="https://github.com/Telknub/christmas-portal/pull/3#:~:text=%5BFEAT%5D%20Grit%20event,Code" target="_blank">Grit
                            </a><br />
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/christmas-portal/pull/11#:~:text=%5BFEAT%5D%20Event-,indicator,-emoticon%20%2311">Emoticon
+                            href="https://github.com/Telknub/christmas-portal/pull/11#:~:text=%5BFEAT%5D%20Event-,indicator,-emoticon%20%2311" target="_blank">Emoticon
                             Indicator</a><br />
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/Telknub/christmas-portal/pull/2#:~:text=%5BFEAT%5D%20Snowstorm-,Mechanics,-and%20Player%20Speed%20Modifiers%20%232">Snow
+                            href="https://github.com/Telknub/christmas-portal/pull/2#:~:text=%5BFEAT%5D%20Snowstorm-,Mechanics,-and%20Player%20Speed%20Modifiers%20%232" target="_blank">Snow
                             storm</a><br />
                     </li>
                     <h3 class="github_des" style="margin-top: 1rem;">This included base movement, interaction logic, <br/> and event-specific behavior across different entities.</h3>
@@ -170,34 +170,34 @@
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:.</h3><br />
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/easter-portal/pull/3#:~:text=FEAT%5D%20Normal%20Hawk-,enemy,-mechanics%20%233">Normal
+                            href="https://github.com/andresgargav/easter-portal/pull/3#:~:text=FEAT%5D%20Normal%20Hawk-,enemy,-mechanics%20%233" target="_blank">Normal
                             Hawk</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/easter-portal/pull/4#:~:text=Special-,Hawk,-Mechanics%20%234">Special
+                            href="https://github.com/andresgargav/easter-portal/pull/4#:~:text=Special-,Hawk,-Mechanics%20%234" target="_blank">Special
                             Hawk</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/easter-portal/pull/1#:~:text=FEAT%5D%20Normal%20snake-,enemy,-mechanics%20%231">Normal
+                            href="https://github.com/andresgargav/easter-portal/pull/1#:~:text=FEAT%5D%20Normal%20snake-,enemy,-mechanics%20%231" target="_blank">Normal
                             Snake</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/easter-portal/pull/2#:~:text=Special-,Snake,-Mechanics%20%232">Special
+                            href="https://github.com/andresgargav/easter-portal/pull/2#:~:text=Special-,Snake,-Mechanics%20%232" target="_blank">Special
                             Snake</a>
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/easter-portal/pull/5/files#:~:text=Easter-,Portal,-sound%2Deffects%20%235">Implementing
+                            href="https://github.com/andresgargav/easter-portal/pull/5#:~:text=Insights-,Easter%20Portal%20sound%2Deffects,-%235" target="_blank">Implementing
                             sound effects</a>
                     </li>
                         <h3 class="github_des" style="margin-top: 1rem;">This included base movement, interaction logic, <br/> and event-specific behavior across different entities.</h3>
                     <br />
                     <h5>Youtube video link:</h5>
                     <li>
-                        <a class="github_links" href="https://www.youtube.com/watch?v=OEsvT5LogAU">Sunflower Land Easter Event</a>
+                        <a class="github_links" href="https://www.youtube.com/watch?v=OEsvT5LogAU" target="_blank">Sunflower Land Easter Event</a>
                     </li>
                 </div>
 
@@ -216,19 +216,19 @@
                     <h5>GitHub contribution links:</h5>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/festival-of-color-2025/pull/1#:~:text=enemies%20BlastBros%20and-,BounceBros,-%231">BlastBros
+                            href="https://github.com/andresgargav/festival-of-color-2025/pull/1#:~:text=enemies%20BlastBros%20and-,BounceBros,-%231" target="_blank">BlastBros
                             and BounceBros</a><br />
                     </li>
                     <li>
                         <a class="github_links"
-                            href="https://github.com/andresgargav/festival-of-color-2025/pull/3#:~:text=Update%20guide%2C%20sound-,effects,-%2C%20and%20decoration%20%233">Guide
+                            href="https://github.com/andresgargav/festival-of-color-2025/pull/3#:~:text=Update%20guide%2C%20sound-,effects,-%2C%20and%20decoration%20%233" target="_blank">Guide
                             update, sound effects, and decoration code implementation</a><br />
                     </li>
                         <h3 class="github_des" style="margin-top: 1rem;">This included base movement, interaction logic, <br/> and event-specific behavior across different entities.</h3>
                     <br />
                     <h5>Youtube video link:</h5>
                     <li>
-                        <a class="github_links" href="https://www.youtube.com/watch?v=T5v3HVq8lUE">Festival of Colors
+                        <a class="github_links" href="https://www.youtube.com/watch?v=T5v3HVq8lUE" target="_blank">Festival of Colors
                             Minigame in Sunflower Land</a>
                     </li>
                 </div>
@@ -257,13 +257,13 @@
                 <h5>GitHub repository link :</h5>
                 <li>          
                     <a class="github_links"
-                        href="https://github.com/Maxam07/Teks/tree/Premium_Cards_II#:~:text=Settings-,Teks,-Public">Teks
+                        href="https://github.com/Maxam07/Teks/tree/Premium_Cards_II#:~:text=Settings-,Teks,-Public" target="_blank">Teks
                         repository</a>
                 </li>
                 <h5 style="margin-top: 1rem;">Youtube video link :</h5>   
                 <li>          
                     <a class="github_links"
-                        href="https://www.youtube.com/watch?v=lnmj2rXgVLY">Teks/Tex</a>
+                        href="https://www.youtube.com/watch?v=lnmj2rXgVLY" target="_blank">Teks/Tex</a>
                 </li>
             </div>
         </div>
@@ -273,10 +273,10 @@
     <div id="contact">
         <span>Let's Talk</span>
         <div class="contact_icons">
-            <a href="mailto:maxuberas@gmail.com"><img class="contact_img" src="svg/gmail-svgrepo-com.svg"></a>
-            <a href="https://discordapp.com/users/958601372230643753"><img class="contact_img"
+            <a href="mailto:maxuberas@gmail.com" target="_blank"><img class="contact_img" src="svg/gmail-svgrepo-com.svg"></a>
+            <a href="https://discordapp.com/users/958601372230643753" target="_blank"><img class="contact_img"
                     src="svg/discord-svgrepo-com.svg"></a>
-            <a href="https://www.instagram.com/maxuberas?igsh=dnFweG04cGNtNjQ4"><img class="contact_img"
+            <a href="https://www.instagram.com/maxuberas?igsh=dnFweG04cGNtNjQ4" target="_blank"><img class="contact_img"
                     src="svg/instagram-1-svgrepo-com.svg"></a>
         </div>
     </div>
