--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="contribution_link">
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:</h3><br/>
-                    <h5>GitHub contribution links:</h5>
+                    <h5>GitHub commit history:</h5>
                     <li>
                         <a  class="github_links"
                             href="https://github.com/Telknub/halloween-portal/pull/6#:~:text=Add%20first-,enemy,-%236" target="_blank">First Enemy</a>
@@ -131,7 +131,7 @@
 
                 <div class="contribution_link">
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:</h3><br/>
-                    <h5>GitHub contribution links:</h5>
+                    <h5>GitHub commit history:</h5>
                     <li>
                         <a class="github_links"
                             href="https://github.com/Telknub/christmas-portal/pull/1#:~:text=%5BFEAT%5D%20Krampus%20and,Code" target="_blank">Krampus
@@ -166,8 +166,8 @@
                 <h5>Easter mini-game <br /> Released - April 2025</h5>
 
                 <div class="contribution_link">
-                    <h5>GitHub contribution links:</h5>
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:.</h3><br />
+                    <h5>GitHub commit history:</h5>
                     <li>
                         <a class="github_links"
                             href="https://github.com/andresgargav/easter-portal/pull/3#:~:text=FEAT%5D%20Normal%20Hawk-,enemy,-mechanics%20%233" target="_blank">Normal
@@ -213,7 +213,7 @@
                 
                 <div class="contribution_link">
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:</h3><br />
-                    <h5>GitHub contribution links:</h5>
+                    <h5>GitHub commit history::</h5>
                     <li>
                         <a class="github_links"
                             href="https://github.com/andresgargav/festival-of-color-2025/pull/1#:~:text=enemies%20BlastBros%20and-,BounceBros,-%231" target="_blank">BlastBros
@@ -254,7 +254,7 @@
                     orientation.
                 </li>
             <div class="contribution_link" style="margin-top: 1rem;">
-                <h5>GitHub repository link :</h5>
+                <h5>GitHub project repository:</h5>
                 <li>          
                     <a class="github_links"
                         href="https://github.com/Maxam07/Teks/tree/Premium_Cards_II#:~:text=Settings-,Teks,-Public" target="_blank">Teks
