--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 
                 <div class="contribution_link">
                     <h3 class="github_des">Developed and implemented behavior logic for various game elements, including:</h3><br />
-                    <h5>GitHub commit history::</h5>
+                    <h5>GitHub commit history:</h5>
                     <li>
                         <a class="github_links"
                             href="https://github.com/andresgargav/festival-of-color-2025/pull/1#:~:text=enemies%20BlastBros%20and-,BounceBros,-%231" target="_blank">BlastBros
