--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="shortName">I'm Max <br />Web/Game Developer</h1>
             <p class="long_text">I'm a passionate web and game developer with experience in creating 2D games. I also
                 have a strong
-                foundation in web development, specializing in building responsive websiste. I enjoy taking on projects
+                foundation in web development, specializing in building responsive websites. I enjoy taking on projects
                 that
                 challenge me to learn new skills and push my creative boundaries.
             </p>
@@ -88,7 +88,7 @@
 
     <!-- My Projects start -->
     <div id="my_projects">
-        <p class="long_text">These 2D mini-games, built using TypeScript, Phaser, JavaScript, and React for the
+        <p class="long_text">These 2D mini-games projects, built using TypeScript, Phaser, JavaScript, and React for the
             Sunflower Land Web3 farming and crafting game, showcase my expertise in coding game mechanics, creating
             smooth and engaging gameplay, and fixing bugs.</p>
         <div class="my_proj_box">
